; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_files.c_FS_fplength.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_files.c_FS_fplength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_END = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @FS_fplength(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @ftell(i32* %5)
  store i64 %6, i64* %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load i32, i32* @SEEK_END, align 4
  %9 = call i32 @fseek(i32* %7, i64 0, i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @ftell(i32* %10)
  store i64 %11, i64* %4, align 8
  %12 = load i32*, i32** %2, align 8
  %13 = load i64, i64* %3, align 8
  %14 = load i32, i32* @SEEK_SET, align 4
  %15 = call i32 @fseek(i32* %12, i64 %13, i32 %14)
  %16 = load i64, i64* %4, align 8
  ret i64 %16
}

declare dso_local i64 @ftell(i32*) #1

declare dso_local i32 @fseek(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
